# RFQAgent

./: .dockerignore  .env.example  .gitignore  AgenticAI_Rules_Diagram.md  CONVERSATION_MATCHING_VIA_MESSAGE_ID.md  DEMO_GUIDE.md  Dockerfile  Makefile  README.md  alibaba_enterprice_details.md  docker-compose.yml  main.py  pyproject.toml
coding_standards_documents/: 01-architecture-options-comparison.md  02-recommended-architecture.md  03-folder-structure.md  04-coding-standards-and-rules.md  05-alternative-architectures.md  README.md
skills/emails-patterns/apology-email/: SKILL.md
src/: __init__.py
src/api/: __init__.py  deps.py  main.py  templating.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  enums.py  models.py
src/integrations/: __init__.py  database.py  llm.py  llm_client.py
src/modules/: __init__.py
src/observability/: __init__.py  logging.py
src/services/: __init__.py  auth_service.py  exceptions.py  password_hasher.py  sample_query_prompts.py  sample_query_service.py  token_service.py  user_repository.py
static/css/: styles.css
templates/: app_base.html  base.html  dashboard.html  login.html  register.html  rfq_email_template.html
templates/email_templates/: rfq_follow_up_email_template.html  rfq_negotiation_template.html
tests/: conftest.py
tests/unit/: test_auth_service.py  test_email_delivery.py  test_email_delivery_sendgrid.py  test_email_draft_service.py  test_email_extraction.py  test_password_hasher.py  test_reply_extraction.py  test_sample_query_service.py  test_token_service.py  test_worker_service.py
(+86 files in other folders)
